
Current Development Version: WSPR-4.0


2014-04-28 commit r4155 Greg Beam <ki7mt@yahoo.com>

* Update wspr-dist.sh for Mac and other distros
* Added files to copy section.


2014-04-27 commit r4154 Greg Beam <ki7mt@yahoo.com>

* Update wspr manpage
* fix -x permissions on gocal and fcal.f90
* remove wsjt.ico from wspr-manifest.in


2014-04-26 commit r4153 Greg Beam <ki7mt@yahoo.com>

* Add manpage for wsprcode


2014-04-26 commit r4152 Greg Beam <ki7mt@yahoo.com>

* Fix permission issues using ln -s
* Update the user install script
* Fix up paths in configure.ac and Makefile.in
* Fix docs location to /usr/share/doc/wspr v.s wspr/doc

TO-DO
* Create standard size icons 16x16, 48x48, 64x64..128x128  etc etc
* Add icons to /usr/share/pixmaps /usr/share/icons .. .. ..
* Add wspr.desktop file /usr/share/applications
* Fix wspr.py so it uses *Nix xbm or png when running on *Nix v.s. wsjt.ico


2014-04-25 commit r4151 Greg Beam <ki7mt@yahoo.com>

* Updated install / uninstall
* All binaries are now in /usr/bin
* All docs are in /usr/share/wspr/doc
* All manpages are in /usr/share/man/man1
* Added wspr.sh script, links all needed files to $HOME/.wspr @ runtime
* Uninstall leaves user config files v.s. deleting them.
* Current svn builds and runs from .deb files generated with pbuilder
  (i386 && amd64) chroot enviroments.

To build and run:

  autogeh.sh
  make && sudo make install
  wspr


2014-04-24 commit r4150 Greg Beam <ki7mt@yahoo.com>

* Update Makefile.in for fmtest.f90 changes
* Edit Makefile.in and remove configure & Makefile
  from clean && distclean targets
* Added mapnpages for all /usr/bin binaries:
  wspr, wspr0, fmtest, fmtave, fcal, fmeasure
* Update gocal script
* Added doc/examples for FMT documentation
* Moved man-page sources to wspr/manpages
* Moved built manpages to: wspr/manpages/man1
* Update wspr-dist.sh to accomidate all changes


TO-DO:
* Update installation to use GNU install
* Move binaries to /usr/bin