@@ -4,6 +4,14 @@ Current Development Version: WSPR-4.0
 
 2014-04-28 commit r4155 Greg Beam <ki7mt@yahoo.com>
 
+* Added FFLAGS to direct call targets
+* Update Mac FFLAGS for -m64
+* Added armv6 CFLAGS and FFLAGS
+* Edited gocal script, removed the ./
+
+
+2014-04-28 commit r4155 Greg Beam <ki7mt@yahoo.com>
+
 * Update wspr-dist.sh for Mac and other distros
 * Added files to copy section.
 
